﻿1.1.0
-----
1. Display 'Calculating...', and 'Deleting...' in cache settings page if
   relevant.
2. Add "(Muted)" to volume button tooltip if volume is currently muted.
3. If cover name contains %artist%, then replace with the album artist of the
   current song. Likewise for %album%
4. Add option (to sidebar context menu) to toggle usage of monochrome icons.

1.0.3
-----
1. Dont display codec settings in copy dialog unless we are copying to a
   device, or from an AudioCD.
2. Save size of Track Organiser, Tag Editor, and ReplayGain dialogs.
3. Fix consistency of default button in messageboxes between Qt and KDE builds.

1.0.2.1
-------
1. Re-spin to add Qt SVG iconengine to windows installer.

1.0.2
-----
 1. Show artist name as caption for cover dialog when setting artist images.
 2. Connect 'Set Cover' signal for windows builds.
 3. Fix usage of timers in threads.
 4. Fix non-taglib build.
 5. Fix loading of SVGs in windows build.
 6. Fix cover downloading.
 7. Fix deletion of threads.
 8. Enable online services for windows builds.
 9. Fix 'No such song' warning when removing songs from playqueue.
10. Indicate when streams file is read-only.
11. Better status labels for streams and dynamic pages.

1.0.1
-----
1. Dont display Jamendo and Magnatune cache settings in config dialog if these
   have been disabled at build time.
2. Correctly calculate size of cache folders when folder does not exist.
3. Fix deletion of cache when single item selected.

1.0.0
-----
  1. Give tooltips to view actions.
  2. Add 'Set Album Artist from Artist' action to tag editor.
  3. Add option to specify max cover size when transfering to device.
  4. Remove 'Small Control Buttons' and 'Small Playback Buttons' options.
  5. Prompt before disconnecting a device.
  6. For playqueue items, if we only have a filename, and no artist, etc, then
     attempt to ascertain artist, album, title, and track number from the
     filename. These will be extracted if the filename has the following