@@ -6,6 +6,7 @@
 3. If cover name contains %artist%, then replace with the album artist of the
    current song. Likewise for %album%
 4. Add option (to sidebar context menu) to toggle usage of monochrome icons.
+5. After ripping a CD, prompt as to whether to calculate ReplyGain.
 
 1.0.3
 -----
